--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <a href="https://www.freshii.com/" ><img src="images/logo.svg"></a>
 
 <nav class="navbar">
-    <a href="#MENU" class="active"> Freshii MENU</a>
+    <a href="#MENU" class="active">MENU</a>
     <a href="#ORDER" >ORDER</a>
     <a href="#REWARDS" >REWARDS</a>
     <a href="#VITAMINS" >VITAMINS</a>
