adding firebase datase

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="#ORDER" >ORDER</a>
     <a href="#REWARDS" >REWARDS</a>
     <a href="#VITAMINS" >VITAMINS</a>
-    <a href="#FRANCHISING" >FRANCHISING</a>
+    <a href="#FRANCHISING" >Contact</a>
     <a href="#GIFT" >GIFT CARD</a>
 </nav>
  
